--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "spate":         ">= 0.1.0",
     "uglify-js":     ">= 1.1.1",
     "underscore":    ">= 1.2.2",
-    "highlight.js":  ">=7.3.0"
+    "highlight.js":  ">=7.3.0",
+    "stylus":        ">=0.32.1"
   },
   "devDependencies": {},
 
