--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name":        "citare-scriptum",
-  "version":     "0.5.6",
+  "name": "citare-scriptum",
+  "version": "0.5.7",
   "description": "Documentation generation, in the spirit of literate programming.",
-  "keywords":   ["documentation", "docs", "generator"],
-  "homepage":    "https://github.com/druide/citare-scriptum.git",
-  "author":      "Dmitry Savransky \"Druide\" (https://github.com/druide)",
-
+  "keywords": ["documentation", "docs", "generator"],
+  "homepage": "https://github.com/druide/citare-scriptum.git",
+  "author": "Dmitry Savransky \"Druide\" (https://github.com/druide)",
   "licenses": [{
     "type": "MIT",
-    "url":  "https://github.com/druide/citare-scriptum.git/MIT-LICENSE.txt"
+    "url": "https://github.com/druide/citare-scriptum.git/MIT-LICENSE.txt"
   }],
-
   "repository": {
     "type": "git",
     "url": "https://github.com/druide/citare-scriptum.git"
   },
-
   "main": "./index",
   "directories": {
     "lib": "./lib"
@@ -23,25 +20,22 @@
   "bin": {
     "citare": "./bin/citare"
   },
-
   "engines": {
-    "node": ">= v0.4.12"
+    "node": ">= v0.10.0"
   },
   "dependencies": {
-    "coffee-script": ">= 1.1.3",
-    "colors":        ">= 0.5.1",
-    "fs-tools":      ">= 0.1.0",
-    "glob":          ">= 3.0.1",
-    "jade":          ">= 0.17.0",
-    "optimist":      ">= 0.3.4",
-    "marked":        ">= 0.2.8",
-    "spate":         ">= 0.1.0",
-    "uglify-js":     ">= 1.1.1",
-    "underscore":    ">= 1.2.2",
-    "highlight.js":  ">=7.3.0",
-    "stylus":        ">=0.32.1"
+    "coffee-script": "~1.7.1",
+    "colors": "~0.6.2",
+    "fs-tools": "~0.2.11",
+    "jade": "~1.3.0",
+    "optimist": "~0.6.1",
+    "marked": "~0.2.9",
+    "spate": "~0.1.0",
+    "uglify-js": "~2.4.13",
+    "underscore": "~1.6.0",
+    "highlight.js": ">=7.3.0",
+    "stylus": "~0.42.3"
   },
   "devDependencies": {},
-
   "scripts": {}
 }
