--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "citare-scriptum",
   "version": "0.5.7",
   "description": "Documentation generation, in the spirit of literate programming.",
-  "keywords": ["documentation", "docs", "generator"],
+  "keywords": [
+    "documentation",
+    "docs",
+    "generator"
+  ],
   "homepage": "https://github.com/druide/citare-scriptum.git",
   "author": "Dmitry Savransky \"Druide\" (https://github.com/druide)",
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/druide/citare-scriptum.git/MIT-LICENSE.txt"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/druide/citare-scriptum.git/MIT-LICENSE.txt"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/druide/citare-scriptum.git"
@@ -24,17 +30,18 @@
     "node": ">= v0.10.0"
   },
   "dependencies": {
-    "coffee-script": "~1.7.1",
+    "coffee-script": "~1.6.3",
     "colors": "~0.6.2",
     "fs-tools": "~0.2.11",
     "jade": "~1.3.0",
     "optimist": "~0.6.1",
-    "marked": "~0.2.9",
+    "marked": "0.2.9",
     "spate": "~0.1.0",
     "uglify-js": "~2.4.13",
     "underscore": "~1.6.0",
-    "highlight.js": ">=7.3.0",
-    "stylus": "~0.42.3"
+    "highlight.js": "~8.0.0",
+    "stylus": "~0.42.3",
+    "glob": "~3.2.9"
   },
   "devDependencies": {},
   "scripts": {}
